# tracing-subscriber-init

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  Rakefile.toml  audit.toml  tarpaulin.toml
.github/workflows/: audit.yml  main.yml  tracing-subscriber-init.yml
src/: config.rs  initialize.rs  lib.rs  utils.rs
src/format/: compact.rs  full.rs  json.rs  mod.rs  pretty.rs
tests/: try_init.rs
