[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = [
    "config",
    "development-tools::debugging",
    "development-tools::profiling",
]
description = "A trait and some functions to make tracing subscriber initialization a bit easier"
documentation = "https://docs.rs/tracing-subscriber-init"
edition = "2024"
homepage = "https://github.com/rustyhorde/tracing-subscriber-init"
keywords = ["tracing", "tracing-subscriber", "configuration"]
license = "MIT OR Apache-2.0"
name = "tracing-subscriber-init"
readme = "README.md"
repository = "https://github.com/rustyhorde/tracing-subscriber-init"
version = "0.2.4"
rust-version = "1.85.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
json = ["tracing-subscriber/json"]
tstime = ["tracing-subscriber/time", "time"]
unstable = []

[dependencies]
anyhow = "1.0.100"
time = { version = "0.3.44", default-features = false, features = [
    "formatting",
], optional = true }
tracing = { version = "0.1.41", features = ["max_level_trace"] }
tracing-subscriber = "=0.3.19"

[build-dependencies]
rustversion = "1.0.22"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
    'cfg(coverage,coverage_nightly)',
] }
